feat: create shopping items
Create routes, service and repository;
Insert routes into swagger file;
