# src/shopping-items/dto/patchShopping-items-input.dto.ts
@@ -1,0 +1,9 @@
+import { Exclude, Expose } from '@nestjs/class-transformer';
+import { IsNumber } from '@nestjs/class-validator';
+
+@Exclude()
+export class PatchShoppingItemsInput {
+  @Expose()
+  @IsNumber()
+  expectedValue: number;
+}
