# src/shopping-items/entities/shopping-items.entity.ts
@@ -1,0 +1,13 @@
+export class ShoppingItems {
+  id: string;
+
+  list: string;
+
+  product: string;
+  
+  expectedValue: number;
+  
+  created_at: Date;
+
+  updated_at: Date;
+}
