# src/shopping-items/entities/shopping-itemsProduct.entity.ts
@@ -1,0 +1,19 @@
+export class ShoppingItemsProduct {
+  id: string;
+
+  list: string;
+
+  product: string;
+  
+  expectedValue: number;
+
+  description: string;
+
+  brand: string;
+  
+  image: string;
+  
+  created_at: Date;
+
+  updated_at: Date;
+}
